fixes app height rule on mobile when url bar is displayed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 /* START - Override particular default mapbox styles */
